force-app/main/default/objects/Feature__c/Feature__c.object-meta.xml
<CustomObject>
    <description>Features are components that fulfill business requirements.</description>
    <label>Feature</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Feature No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>