force-app/main/default/objects/Feature__c/fields/Build_Task__c.field-meta.xml
<CustomField>
    <fullName>Build_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Task</label>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>Lookup</type>
</CustomField>