force-app/main/default/objects/Feature__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Features</relationshipName>
    <type>Lookup</type>
</CustomField>