force-app/main/default/objects/Feature__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>Formula that pulls that Component Type field from the parent Component</description>
    <formula>IF(
  Component__r.RecordType.Name = &quot;Field&quot;,
  &quot;Field&quot;,
  TEXT(Component__r.Component_Type__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula that pulls that Component Type field from the parent Component</inlineHelpText>
    <label>Component Type</label>
    <type>Text</type>
</CustomField>