force-app/main/default/objects/Feature__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Formula that pulls the object field from the parent component</description>
    <formula>IF(
  NOT(ISBLANK(TEXT(Component__r.Standard_Object__c))),
  TEXT(Component__r.Standard_Object__c),
  IF(
    NOT(ISBLANK(Component__r.Custom_Object__c)),
    Component__r.Custom_Object__c,
    null
  )
)</formula>
    <inlineHelpText>Formula that pulls the object field from the parent component</inlineHelpText>
    <label>Object</label>
    <type>Text</type>
</CustomField>