force-app/main/default/objects/Feature__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Project from Requirement object</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Requirement__r.Project__c , Requirement__r.Project__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>