force-app/main/default/objects/Feature__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Features</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>