force-app/main/default/objects/Feature__c/fields/Requirement_Status__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Status__c</fullName>
    <description>This formula field pulls in the Status field from the parent Requirement to be displayed on the Component page layout under the Features related list</description>
    <formula>TEXT( Requirement__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Status</label>
    <type>Text</type>
</CustomField>