force-app/main/default/objects/Feature__c/listViews/All_Features.listView-meta.xml
<ListView>
    <fullName>All_Features</fullName>
    <columns>NAME</columns>
    <columns>Component__c</columns>
    <columns>Requirement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Features</label>
</ListView>